app/assets/stylesheets/components/_chat-card.scss
.chat-card{
    align-items: center;
    margin-top: 10px;
    margin-left: 8vw;
    margin-bottom: 10px;
    background: $white;
    padding: 8px 16px;
    padding: 0px;
    border-radius: 100px 0px 0px 100px;

    h3 {
      color: $black;
      text-decoration: none;
      font-weight: 800;
    }

    p {
      color: $black;
      text-decoration: none;
    }



  .chat-card-content {
    flex-grow: 1;
    padding: 0 0 0 5%;
  }

  .chat-card-content h3 {
    margin: 0;
  }

  .chat-card-content p {
    margin: 0;
  }
}

.chat-link {
  align-items: center;
  display: flex;
  color: $black !important;
  text-decoration: none;
}

